--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Lista Zadan</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/container.css">
-    <link rel="stylesheet" href="css/taskFieldset">
+    <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/list.css">
+    <link rel="stylesheet" href="css/button.css">
     <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -28,24 +30,17 @@
 <body>
     <div class="container">
         <h1>Lista zadan</h1>
-        
-        <br>
-        <form class="js-form">
-            <fieldset class="taskFieldset">
-                <legend>
-                    <h2>Dodaj nowe zadanie</h2>
-                </legend>
-                <input class="js-newTask">
-                <button>Dodaj zadanie</button>
+        <h2 class="container__header">Dodaj nowe zadanie</h2>
+        </p>
+        <form class="form js-form">
+            <fieldset class="form__fieldset">
+                <input class="form__field" class="js-newTask">
+                <button class="form__button">Dodaj zadanie</button>
             </fieldset>
         </form>
-
-        <h2>Lista zadan</h2>
-        <br>
-        <ul class="js-tasks"></ul>
+        <h2 class="container__header">Lista zadan</h2>
+        <ul class="js-tasks listItem"></ul>
     </div>
-
-
 </body>
 
 </html>
