--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/list.css">
     <link rel="stylesheet" href="css/button.css">
+    <link rel="stylesheet" href="css/listContainer.css">
     <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -34,12 +35,13 @@
         </p>
         <form class="form js-form">
             <fieldset class="form__fieldset">
-                <input class="form__field" class="js-newTask">
+                <input class="js-newTask form__field" placeholder="Co jest do zrobienia?" autofocus>
                 <button class="form__button">Dodaj zadanie</button>
             </fieldset>
         </form>
         <h2 class="container__header">Lista zadan</h2>
         <ul class="js-tasks listItem"></ul>
+
     </div>
 </body>
 
