template string with ok symbol added to ternary

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </fieldset>
         </form>
         <h2 class="container__header">Lista zadan</h2>
-        <ul class="js-tasks listItem"></ul>
+        <ul class="js-tasks list__item"></ul>
 
     </div>
 </body>
