html and css mod

--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
         </form>
         <p>
             <h2 class="container__header">Lista zadan</h2>
-            <ul class="js-tasks list__item"></ul> 
-            
-        </p>
-        
+            <div class="container__header--section">
+             <ul class="js-tasks list__item"></ul>    
+            </div>         
+        </p>        
     </div>
 </body>
-</html>
