--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista Zadan</title>
+    <meta property="og:image" content="images/checklist.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/container.css">
     <link rel="stylesheet" href="css/form.css">
@@ -39,10 +40,10 @@
             </fieldset>
         </form>
         <p>
-            <h2 class="container__header">Lista zadan</h2>
-            <div class="container__header--section">
-             <ul class="js-tasks list__item"></ul>    
-            </div>         
-        </p>        
+        <h2 class="container__header">Lista zadan</h2>
+        <div class="container__header--section">
+            <ul class="js-tasks list__item"></ul>
+        </div>
+        </p>
     </div>
 </body>
