--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
 </head>
-
 <body>
     <div class="container">
         <h1>Lista zadan</h1>
@@ -43,7 +42,7 @@
         <p>
         <h2 class="container__header">Lista zadan</h2>
         <div class="container__header--section">
-            <ul class="js-tasks list__item"></ul>
+            <ul class="js-tasks list"></ul>
         </div>
         </p>
     </div>
