HTML code formatted document divided for sections

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Lista zadan</h1>
+    <h1>Lista zadań</h1>
+    <section>
         <h2 class="container__header">Dodaj nowe zadanie</h2>
         <form class="form js-form">
             <fieldset class="form__fieldset">
@@ -39,11 +39,12 @@
                 <button class="form__button">Dodaj zadanie</button>
             </fieldset>
         </form>
-        <p>
-        <h2 class="container__header">Lista zadan</h2>
-        <div class="container__header--section">
+    </section>
+    <p></p>
+    <section>
+        <h2 class="container__header">Lista zadań</h2>
+        <div class="container__header--section"></div>
             <ul class="js-tasks list"></ul>
-        </div>
-        </p>
-    </div>
+        </form>
+    </section>
 </body>
