--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section>
         <h1>Lista zadań</h1>
         <h2 class="section__container section__title">Dodaj nowe zadanie</h2>
-        <form class="section__container js-form">
+        <form class="section__container section__container--flex js-form">
                 <input class="section__newTaskInput js-newTask" placeholder="Co jest do zrobienia?" autofocus>
                 <button class="section__addNewTaskButton">Dodaj zadanie</button>
         </form>
@@ -41,7 +41,7 @@
     <section>
         <h2 class="section__container section__container--TopGap section__title">Lista zadań</h2>
         <aside class="section__container"></aside>
-            <ul class="section__taskList js-tasks"></ul>
+            <ul class="section__tasksList js-tasks"></ul>
         </form>
     </section>
 </body>
